Add mastodon rel

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <li><a href="https://blog.foojin.com">Blog</a></li>
     <li><a href="https://blog.foojin.com/cv/"><abbr title="Curriculum Vitae">CV</abbr></a></li>
     <li><a href="https://www.bloogart.com">Photographie</a></li>
-    <li><a href="https://mamot.fr/@GoOz/">Mastodon</a></li>
+    <li><a rel="me" href="https://mamot.fr/@GoOz/">Mastodon</a></li>
     <li><a href="https://twitter.com/GoOz">Twitter</a></li>
   </ul>
 </body>
