fix: svgs label

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <span>And I'm a…</span>
       </h1>
       <figure>
-        <svg role="img">
-          <use href="#kns" alt="My mad-eyed cat avatar I use everywhere" />
+        <svg role="img" aria-label="My mad-eyed cat avatar I use everywhere">
+          <use href="#kns" />
         </svg>
       </figure>
     </div>
@@ -186,28 +186,28 @@
           <ul class="inline-list">
             <li>
               <a class="icon-only" href="https://mamot.fr/@GoOz">
-                <svg role="img" alt="Mastodon" class="network-icon">
+                <svg role="img" aria-label="Mastodon" class="network-icon">
                   <use href="#mastodon"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icon-only" href="https://pixelfed.social/@GoOz">
-                <svg role="img" alt="PixelFed" class="network-icon">
+                <svg role="img" aria-label="PixelFed" class="network-icon">
                   <use href="#pixelfed"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icon-only" href="https://www.instagram.com/gooz/">
-                <svg role="img" alt="Instagram" class="network-icon">
+                <svg role="img" aria-label="Instagram" class="network-icon">
                   <use href="#instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icon-only" href="https://glass.photo/gooz">
-                <svg role="img" alt="Glass" class="network-icon">
+                <svg role="img" aria-label="Glass" class="network-icon">
                   <use href="#glass"></use>
                 </svg>
               </a>
